[package]
name = "cowlang-derive"
version = "0.1.0"
authors = ["Kai Mast <kaimast@cs.cornell.edu>"]
edition = "2018"

[dependencies]
syn = { version="1", features=["full", "extra-traits"] }
quote = "1"

[dev-dependencies]
cowlang = { git="https://github.com/kaimast/cowlang.git", branch="main" }

[lib]
proc-macro = true
